--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
 		<link rel="stylesheet" href="styles.css" />
 	</head>
 	<body>
+		<div class="info">
+			<p class="players"></p>
+		</div>
+
+		<div class="form">
+			<form action="">
+				<label for="firstp">First player name:</label>
+				<input class="input" id="firstp" type="text" value="player1" />
+				<label for="secondp">Second player name:</label>
+				<input class="input" id="secondp" type="text" value="player2" />
+				<input id="submit" type="submit" value="Start" />
+			</form>
+		</div>
 		<div class="container" id="container"></div>
+		<div class="buttons">
+			<button id="next" type="button">Next round</button>
+			<button id="restart" type="button">Restart game</button>
+		</div>
 	</body>
 </html>
